--- a/src/main/resources/templates/post/home.html
+++ b/src/main/resources/templates/post/home.html
@@ -8,7 +8,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">로고</a>
+                <a class="navbar-brand" th:href="@{/post/home}">로고</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -17,7 +17,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">글쓰기</a>
+                            <a class="nav-link" th:href="@{/post/post}">글쓰기</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">음악소개</a>
@@ -42,7 +42,7 @@
         </header>
 
     <main>
-    <a href="/recommend" class="center-button">오늘의 음악 플레이 </a>
+    <a th:href="@{/post/post}" class="center-button">오늘의 음악 플레이 </a>
 </main>
 </body>
 </html>
