--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -15,7 +15,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/main">
           <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="로고" width="30" height="24">
         </a>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -43,14 +43,14 @@
     
       <a th:href="@{/post/post(id=${dto.no})}">
       
-        <img th:src="${post.imageUrl != null ? post.imageUrl : 'https://via.placeholder.com/300x180'}"
-             class="card-img-top" alt="게시글 이미지">
+        <!-- <img th:src="${post.imageUrl != null ? post.imageUrl : 'https://via.placeholder.com/300x180'}"
+             class="card-img-top" alt="게시글 이미지"> -->
       </a>
       <div class="card-content">
         <a th:href="@{/post/post(no=${dto.no})}" class="h5 d-block mb-1">[[${dto.title}]]</a>
         <div class="card-meta">
-          [[${dto.writer}]] ·
-          <span>[[${#temporals.format(dto.regDate, 'yyyy-MM-dd')}]]</span>
+         <span> [[${dto.writer}]] ·
+          [[${#temporals.format(dto.regDate, 'yyyy-MM-dd')}]]</span>
         </div>
       </div>
     </div>
