--- a/src/main/resources/templates/post/post.html
+++ b/src/main/resources/templates/post/post.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org">
 
+<head>
+    <meta charset="UTF-8">
+    <title>게시글 작성</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+
+<body>
+    <div class="container mt-5">
+        <h2 class="mb-4">음악 플레이</h2>
+
+        <form th:action="@{/board/register}" method="post">
+
+            <div class="mb-3">
+                <label></label>
+                <input type="text" class="form-control" id="title" placeholder="제목을 입력하세요" required>
+            </div>
+
+            <div class="mb-3">
+                <label></label>
+                <input type="text" class="form-control" id="writer" placeholder="작성자" required>
+            </div>
+
+            <div class="mb-3">
+                <label></label>
+                <input type="text" class="form-control" id="music" placeholder="음악" readonly>
+            </div>
+
+            <div class="mb-3">
+                <label></label>
+                <textarea class="form-control" id="content" rows="6" placeholder="내용을 입력하세요"
+                    required></textarea>
+            </div>
+
+            <button type="submit" class="btn btn-primary">글 작성</button>
+            <a th:href="@{/posts/list}" class="btn btn-secondary">목록으로</a>
+        </form>
+    </div>
 </body>
+
 </html>
