--- a/src/main/resources/templates/post/home.html
+++ b/src/main/resources/templates/post/home.html
@@ -20,19 +20,13 @@
                             <a class="nav-link" th:href="@{/post/post}">글쓰기</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">음악소개</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">질문</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">캘린더</a>
+                            <a class="nav-link" th:href="@{/post/list}">글 모음</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">마이페이지</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">로그인</a>
+                            <a class="nav-link" th:href="@{/post/login}">로그인</a>
                         </li>
                     </ul>
     
