--- a/src/main/resources/templates/post/login.html
+++ b/src/main/resources/templates/post/login.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <header>
+     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">로고</a>
+                <a class="navbar-brand" th:href="@{/post/home}">로고</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -21,22 +21,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">글쓰기</a>
+                            <a class="nav-link" th:href="@{/post/post}">글쓰기</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">음악소개</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">질문</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">캘린더</a>
+                            <a class="nav-link" th:href="@{/post/list}">글 모음</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">마이페이지</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">로그인</a>
+                            <a class="nav-link" th:href="@{/post/login}">로그인</a>
                         </li>
                     </ul>
     
