--- a/src/main/resources/templates/post/post.html
+++ b/src/main/resources/templates/post/post.html
@@ -8,34 +8,64 @@
 </head>
 
 <body>
+ <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" th:href="@{/post/home}">로고</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+    
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/post/post}">글쓰기</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/post/list}">글 모음</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">마이페이지</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/post/login}">로그인</a>
+                        </li>
+                    </ul>
+    
+                </div>
+            </div>
+        </nav>
+        </header>
+        
     <div class="container mt-5">
         <h2 class="mb-4">음악 플레이</h2>
 
-        <form th:action="@{/board/register}" method="post">
+        <form th:action="@{/post/post}" th:method="post">
 
             <div class="mb-3">
                 <label></label>
-                <input type="text" class="form-control" id="title" placeholder="제목을 입력하세요" required>
+                <input type="text" class="form-control" name="title" placeholder="제목을 입력하세요" required>
             </div>
 
             <div class="mb-3">
                 <label></label>
-                <input type="text" class="form-control" id="writer" placeholder="작성자" required>
+                <input type="text" class="form-control" name="writer" placeholder="작성자" required>
             </div>
 
             <div class="mb-3">
                 <label></label>
-                <input type="text" class="form-control" id="music" placeholder="음악" readonly>
+                <input type="text" class="form-control" name="music" placeholder="음악" readonly>
             </div>
 
             <div class="mb-3">
                 <label></label>
-                <textarea class="form-control" id="content" rows="6" placeholder="내용을 입력하세요"
+                <textarea class="form-control" name="content" rows="6" placeholder="내용을 입력하세요"
                     required></textarea>
             </div>
 
             <button type="submit" class="btn btn-primary">글 작성</button>
-            <a th:href="@{/posts/list}" class="btn btn-secondary">목록으로</a>
+            <a th:href="@{/post/list}" class="btn btn-secondary">목록으로</a>
         </form>
     </div>
 </body>
