--- a/src/main/resources/templates/post/modify.html
+++ b/src/main/resources/templates/post/modify.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+ <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 </head>
 <body>
  <header>
